sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: not found: value inverse
	inverse=false
        ^AlgBubbleSort2:12: error: not found: value inverse
			inverse=true
                        ^